# ofono-example-plugin

./: configure.ac
rpm/: ofono-example-plugin.spec
src/: Makefile.am  dbus-iface.c  dbus-iface.h  example-plugin.c
